--- a/example.html
+++ b/example.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <title>eocNewsticker: A simple jQuery newsticker plugin</title>
 <script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
-<script src="jquery.eocnewsticker.js"></script>
+<script src="eocnewsticker.js"></script>
 <link rel="stylesheet" href="eocnewsticker.css">
 <script>
 
