--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
 <html lang="de">
 <head>
 <meta charset="utf-8">
-<title>eocNewsticker: A simple jQuery newsticker plugin</title>
+<title>eocNewsticker: A jQuery newsticker plugin</title>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="eocnewsticker.js"></script>
 <link rel="stylesheet" href="eocnewsticker.css">
