--- a/example.html
+++ b/example.html
@@ -60,6 +60,9 @@ body {
   <h1>Quick AJAX example with JSONP (Cross-Domain):</h1>
   <div id="example-3"></div>
 
+  <br><br>
+  <div>For more information see the <a href="https://github.com/eyeofchaos/eocNewsticker" target="_blank">eocNewsticker GitHub repository</a>.</div>
+
 </div>
 
 </body>
