--- a/example.html
+++ b/example.html
@@ -51,13 +51,15 @@ body {
 
 <div id="container">
 
-  <h1>Quick static example:</h1>
+  <h1>eocNewsticker examples</h1>
+
+  <h2>Static</h2>
   <div id="example-1">The quick brown fox jumps over the lazy dog</div>
 
-  <h1>Quick AJAX example with JSON:</h1>
+  <h2>AJAX with JSON</h2>
   <div id="example-2"></div>
 
-  <h1>Quick AJAX example with JSONP (Cross-Domain):</h1>
+  <h2>AJAX with JSONP (Cross-Domain)</h2>
   <div id="example-3"></div>
 
   <br><br>
