--- a/example.html
+++ b/example.html
@@ -3,39 +3,9 @@
 <html lang="de">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>eocjsNewsticker: A jQuery newsticker plugin</title>
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="eocjs-newsticker.js"></script>
 <link rel="stylesheet" href="eocjs-newsticker.css">
-<script>
-
-$(function() {
-
-  $("#example-1").eocjsNewsticker({
-    speed: 25,
-    timeout: 0.5
-  });
-
-  $("#example-2").eocjsNewsticker({
-    divider: "***",
-    type: 'ajax',
-    source: 'example-json.php',
-    interval: 30
-  });
-
-  $("#example-3").eocjsNewsticker({
-    speed: 15,
-    divider: "|",
-    type: 'ajax',
-    source: 'example-json.php',
-    dataType: 'jsonp',
-    interval: 30
-  });
-
-});
-
-</script>
 <style>
 
 body {
@@ -64,6 +34,34 @@ body {
   <br><br>
 
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="eocjs-newsticker.js"></script>
+
+<script>
+
+$('#example-1').eocjsNewsticker({
+  speed:    25,
+  timeout:  0.5
+});
+
+$('#example-2').eocjsNewsticker({
+  divider:   '***',
+  type:      'ajax',
+  source:    'example-json.php',
+  interval:  30
+});
+
+$('#example-3').eocjsNewsticker({
+  speed:     15,
+  divider:   '|',
+  type:      'ajax',
+  source:    'example-json.php',
+  dataType:  'jsonp',
+  interval:  30
+});
+
+</script>
 
 </body>
 </html>
