--- a/example.html
+++ b/example.html
@@ -3,13 +3,30 @@
 <html lang="de">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>eocjsNewsticker: A jQuery newsticker plugin</title>
 <link rel="stylesheet" href="eocjs-newsticker.css">
 <style>
 
+*,
+::before,
+::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: arial, sans-serif;
+}
+
+h1,
+h2 {
+  margin: 1rem 0;
+}
+
+#container {
+  padding: 1rem;
 }
 
 </style>
