--- a/example.html
+++ b/example.html
@@ -43,8 +43,17 @@ h2 {
   <h2>AJAX with JSON</h2>
   <div id="example-2"></div>
 
-  <h2>AJAX with JSONP (Cross-Domain)</h2>
+  <h2>AJAX with JSONP (cross domain)</h2>
   <div id="example-3"></div>
+
+  <h2>Static (direction: rtl)</h2>
+  <div id="example-4">ثعلب بني سريع يقفز فوق كلب كسول</div>
+
+  <h2>AJAX with JSON (direction: rtl)</h2>
+  <div id="example-5"></div>
+
+  <h2>AJAX with JSONP (cross domain, direction: rtl)</h2>
+  <div id="example-6"></div>
 
   <br><br>
   <div>For more information see the <a href="https://github.com/eyeofchaos/eocjsNewsticker" target="_blank">eocjsNewsticker GitHub repository</a>.</div>
@@ -58,24 +67,51 @@ h2 {
 <script>
 
 $('#example-1').eocjsNewsticker({
-  speed:    25,
-  timeout:  0.5
+  'speed':      25,
+  'timeout':    0.5
 });
 
 $('#example-2').eocjsNewsticker({
-  divider:   '***',
-  type:      'ajax',
-  source:    'example-json.php',
-  interval:  30
+  'divider':    '***',
+  'type':       'ajax',
+  'source':     'example-json.php',
+  'interval':   30
 });
 
 $('#example-3').eocjsNewsticker({
-  speed:     15,
-  divider:   '|',
-  type:      'ajax',
-  source:    'example-json.php',
-  dataType:  'jsonp',
-  interval:  30
+  'speed':      15,
+  'divider':    '|',
+  'type':       'ajax',
+  'source':     'example-json.php',
+  'dataType':   'jsonp',
+  'callback':   'callbackLTR',
+  'interval':   30
+});
+
+$('#example-4').eocjsNewsticker({
+  'speed':      25,
+  'divider':    '***',
+  'timeout':    0.5,
+  'direction':  'rtl'
+});
+
+$('#example-5').eocjsNewsticker({
+  'divider':    '***',
+  'type':       'ajax',
+  'source':     'example-json.php',
+  'interval':   30,
+  'direction':  'rtl'
+});
+
+$('#example-6').eocjsNewsticker({
+  speed:        15,
+  divider:      '|',
+  type:         'ajax',
+  source:       'example-json.php',
+  dataType:     'jsonp',
+  callback:     'callbackRTL',
+  interval:     30,
+  direction:    'rtl'
 });
 
 </script>
