--- a/example.html
+++ b/example.html
@@ -67,8 +67,7 @@ h2 {
 <script>
 
 $('#example-1').eocjsNewsticker({
-  speed:      25,
-  timeout:    0.5
+  speed:      25
 });
 
 $('#example-2').eocjsNewsticker({
@@ -100,7 +99,6 @@ $('#example-4').eocjsNewsticker({
 $('#example-5').eocjsNewsticker({
   speed:      25,
   divider:    '***',
-  timeout:    0.5,
   direction:  'rtl'
 });
 
