--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 
 <html lang="de">
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>eocjsNewsticker: A jQuery newsticker plugin</title>
 <link rel="stylesheet" href="/css/bootstrap-5.3.3/bootstrap.min.css">
